# multiprobe-simulation-forward-model

./: .gitignore  LICENSE  README.md  miscellaneous_comments.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml  config_extra_large_scales.yaml  config_large_scales.yaml  config_quadratic_bias.yaml
configs/marcel/: simple.yaml
configs/v10/: grf.yaml  linear_bias.yaml  linear_bias_debug.yaml  linear_bias_legacy.yaml  linear_bias_no_smoothing.yaml  linear_bias_octant.yaml
configs/v11/: debug.yaml  extended.yaml  extended_hard_cut.yaml  power_law.yaml
configs/v12/: nonlinear.yaml
configs/v13/: extended.yaml
configs/v14/: extended.yaml  extended_no_bary.yaml  simple.yaml
configs/v15/: extended.yaml  extended_dmo.yaml  simple.yaml
configs/v16/: default.yaml  simple.yaml
configs/v5/: linear_bias.yaml  quadratic_bias.yaml  stochasticity.yaml
configs/v6/: linear_bias.yaml
configs/v7/: linear_bias.yaml
configs/v8/: linear_bias.yaml  (+3 more)
data/: CosmoGridV1_param_dirs.npy  CosmoGridV1_perms_list.npy  metacal_biases_buzzard_0.h5  metacal_biases_buzzard_0.pkl  metacal_biases_desy3.h5  misc.md
documentation/: euler_environment.md  miscellaneous_comments.md
msfm/: fiducial_pipeline.py  grid_pipeline.py
notebooks/: config.ipynb  metacal_bias.ipynb  metacal_maglim_overlap.ipynb  noise_file.ipynb  permutations_list.ipynb  pixel_file.ipynb  pixel_file_octant.ipynb
pipelines/: pipe.yaml  pipe_debug.yaml  pipe_fiducial.yaml
submissions/: check_cores.py  commands.sh  submit_tfr_fidu_v9_main.slurm  submit_tfr_fidu_v9_merge.slurm  submit_tfr_fidu_v9_merge_log_files.slurm  submit_tfr_fidu_v9_rerun_missing.slurm  submit_tfr_grid_v9_main.slurm  submit_tfr_grid_v9_merge.slurm  submit_tfr_grid_v9_merge_log_files.slurm  submit_tfr_grid_v9_rerun_missing.slurm
(+270 files in other folders)
